# openap

./: mac.oui.20180402  mac2oui.txt  mac2oui.txth  oui_mobile.def
usr/auth/src/: auth
usr/auth/src/rwCertSrc/: rsCert
usr/auth/src/xsup_src/: config_grammar.c  config_grammar.h  config_lexicon.c
usr/boa/: .kernel_config  .users_config  wfaudio.include.mk
usr/boa/html/: c_demo.cgi  www_files  www_files.tar.bz2
usr/boa/src/: .depend  boa
usr/boa/system/: .depend  ddns_inet  ntp_inet  ppp_inet  rtk_eventd  sysconf  timelycheck
usr/boa/tools/: compweb  cvcfg-ap  cvcfg-vpn  cvimg  mgbin  mkramdisk
usr/boa/utils/: .depend  flash  fwd
usr/cwmp-tr069_v2/cwmpClient/: .depend  cwmpClient
usr/wifidog/: config_with_ssl.sh  mac.oui  wifidog.conf  wifidog.conf.org  wifidog.conf.sample
usr/wifidog/libhttpd/: Makefile.am  api.c  httpd.h  protocol.c  version.c
usr/wifidog/src/: Makefile.am  auth.c  centralserver.c  client_list.c  client_list.h  common.h  conf.c  conf.h  firewall.c  firewall.h  fw_iptables.c  fw_iptables.h  gateway.c  http.c  httpd_thread.c  jwHash.c  jwHash.h  pstring.h  simple_http.c  util.c  wa_agent.c  wa_agent.h  wd_util.c  wdctl.h  wdctl_thread.c  wdctl_thread.h
